name:                lambda
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Luke Grehan
maintainer:          dev@lukegrehan.com
build-type:          Simple
cabal-version:       >=1.10

executable lambda
  main-is:             lambda.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
  -- hs-source-dirs:      
  default-language:    Haskell2010
